[package]
name = "fastly-template-rust-default"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "^0.5.0"
log-fastly = "0.1.2"
log = "0.4.11"
config = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.3"
jwt-simple = "0.1.10"
lazy_static = "1.4.0"
regex = "1"
url = "2.1.1"
